rabbitmq/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  ports:
  - name: epmd
    port: 4369
    protocol: TCP
    targetPort: 4369
  - name: cluster-links
    port: 25672
    protocol: TCP
    targetPort: 25672
  clusterIP: None
  selector:
    app: rabbitmq
  sessionAffinity: None

---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-backend
spec:
  selector:
    app: rabbitmq
  ports:
  - name: http
    protocol: TCP
    port: 15672
  - name: amqp
    protocol: TCP
    port: 5672
  selector:
    app: rabbitmq
